First version with WatsonX
First version with WatsonX

--- a/Langchain-PgVector-Ingest-Container.ipynb
+++ b/Langchain-PgVector-Ingest-Container.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "ad0096f4",
    "metadata": {},
    "outputs": [
@@ -104,39 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "74510b06",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b378259",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45cc6ae5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3013cfe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "2734915c",
    "metadata": {},
    "outputs": [],
@@ -156,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "600cd763-6ecc-4c77-89c0-47108c31c44e",
    "metadata": {
     "tags": []
@@ -179,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "11fceeb7",
    "metadata": {},
    "outputs": [],
@@ -197,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "id": "dde8a4a3-d602-49c6-b4a5-31a76b25a58b",
    "metadata": {
     "tags": []
@@ -219,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "edba4a08-2194-4df1-9091-6f2b596757a1",
    "metadata": {
     "tags": []
@@ -231,7 +199,7 @@
        "Document(page_content=\"Vector database\\nA vector database management system (VDBMS) or simply vector database or vector store is a\\ndatabase that can store vectors (fixed-length lists of numbers) along with other data items. Vector databases\\ntypically implement one or more Approximate Nearest Neighbor  (ANN) algorithms,[1][2] so that one can\\nsearch the database with a query vector to retrieve the closest matching da tabase records.\\nVectors are mathematical representations of data in a high-dimensional space. In this space, each dimension\\ncorresponds  to a feature of the data, and tens of thous ands of dimensions might be used to represent\\nsophisticated data. A vector's position in this space represents its characteristics. Words, phrases, or entire\\ndocuments, and images, audio, and ot her types of data can all be vectorized.[3]\\nThese feature vectors may be computed from the raw data using machine learning methods such as feature\\nextraction algorithms, word embeddings[4] or deep learning networks. The goal is that semantically similar\", metadata={'source': 'rhods-doc\\\\Vector_database.pdf', 'page': 0})"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "id": "5aefc08d-a4ad-4aad-9120-cfa98b67cbe2",
    "metadata": {
     "tags": []
@@ -266,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "id": "7195a2a4",
    "metadata": {},
    "outputs": [],
@@ -276,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "37a977c5",
    "metadata": {},
    "outputs": [],
@@ -288,14 +256,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "735feb13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "7ae7eae2-c670-4eb5-803b-b4d591fa83db",
    "metadata": {},
@@ -305,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "id": "5c056c4a",
    "metadata": {},
    "outputs": [],
@@ -315,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "id": "62c084b8",
    "metadata": {},
    "outputs": [],
@@ -325,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "47cbf017",
    "metadata": {},
    "outputs": [],
@@ -335,13 +295,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "bbb6a3e3-5ccd-441e-b80d-427555d9e9f6",
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bin C:\\Users\\rusla\\.conda\\envs\\textgen\\lib\\site-packages\\bitsandbytes\\libbitsandbytes_cuda117.dll\n"
+     ]
+    }
+   ],
    "source": [
     "embeddings = HuggingFaceEmbeddings()\n",
     "\n",
@@ -352,6 +320,27 @@
     "    embedding=embeddings,\n",
     "    collection_name=COLLECTION_NAME,\n",
     "    connection_string=CONNECTION_STRING,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d55f2dbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "langchain.vectorstores.pgvector.PGVector"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(db)"
    ]
   },
   {
