--- a/WatsonX-Base-PgVector-LangChain.ipynb
+++ b/WatsonX-Base-PgVector-LangChain.ipynb
@@ -20,11 +20,8 @@
     }
    },
    "source": [
-    "#### Disclaimers\n",
+    "Hello everyone in this demo we are going to build a simple program that will connect to a Postgre Server with DB vector and use LangChain to answer questions using RAG.\n",
     "\n",
-    "- Use only Projects and Spaces that are available in watsonx context.\n",
-    "\n",
-    "## Notebook content\n",
     "This notebook contains the steps and code to demonstrate support of Retrieval Augumented Generation in watsonx.ai. It introduces commands for data retrieval, knowledge base building & querying, and model testing.\n",
     "\n",
     "Some familiarity with Python is helpful. This notebook uses Python 3.10.\n",
@@ -102,7 +99,7 @@
     "!pip install \"chromadb==0.3.26\" \n",
     "!pip install \"ibm-watson-machine-learning>=1.0.335\" \n",
     "!pip install \"pydantic==1.10.0\"\n",
-    "!pip install python-dotenv\n"
+    "!pip install python-dotenv"
    ]
   },
   {
@@ -723,7 +720,6 @@
    "outputs": [],
    "source": [
     "loader = WebBaseLoader([\"https://ai-on-openshift.io/getting-started/openshift/\",\n",
-    "                \n",
     "                       ])"
    ]
   },
@@ -894,13 +890,6 @@
     " \n",
     "Check out our _<a href=\"https://ruslanmv.com/\" target=\"_blank\" rel=\"noopener no referrer\">Blog</a>_ for more samples, tutorials, documentation, how-tos, and blog posts. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
